--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,6 @@
-PORT=5000Add commentMore actions
-MONGO_URI=mongodb+srv://prajjwalsaggar1:prajjwal1234@cluster0.eepge.mongodb.net/BloodBond
+PORT=5000
+MONGO_URI=mongodb+srv://BobBuilder:Bobnhimanega@healthcare-management-s.sf1gkwk.mongodb.net/?retryWrites=true&w=majority&appName=Healthcare-Management-System
+
 JWT_SECRET="saggar"
 EMAIL_USER="psauthx@gmail.com"
 # EMAIL_PASS="yxgjtfolnkautumxe"
