--- a/Backend/.env
+++ b/Backend/.env
@@ -1,7 +1,7 @@
 PORT=5000
 MONGO_URI=mongodb+srv://BobBuilder:Bobnhimanega@healthcare-management-s.sf1gkwk.mongodb.net/?retryWrites=true&w=majority&appName=Healthcare-Management-System
-JWT_SECRET="saggar"
-EMAIL_USER="psauthx@gmail.com"
+# JWT_SECRET="saggar"
+# EMAIL_USER="psauthx@gmail.com"
 # EMAIL_PASS="yxgjtfolnkautumxe"
-EMAIL_PASS="ecjgjiaedmpgarbo"
-EMAIL_HOST = "smtp.gmail.com"
+# EMAIL_PASS="ecjgjiaedmpgarbo"
+# EMAIL_HOST = "smtp.gmail.com"
