--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,12 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
 node_modules
 dist
 dist-ssr
 *.local
 
-# Editor directories and files
+# Editor directories & files
 .vscode/*
 !.vscode/extensions.json
 .idea
