--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,13 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+
 node_modules
 dist
 dist-ssr
 *.local
 
-# Editor directories & files
+# Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
