--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -8,7 +8,7 @@
     ],
     "routes": [
         {
-            "src": "/(.*)",
+            "src": "/api/(.*)",
             "dest": "server.js",
             "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"],
             "headers": {
@@ -17,6 +17,10 @@
                 "Access-Control-Allow-Headers": "Content-Type, Authorization",
                 "Access-Control-Allow-Credentials": "true"
             }
+        },
+        {
+            "src": "/(.*)",
+            "dest": "server.js"
         }
     ]
 } 
