--- a/Backend/.env
+++ b/Backend/.env
@@ -2,4 +2,5 @@ PORT=5000
 MONGO_URI=mongodb+srv://BobBuilder:Bobnhimanega@healthcare-management-s.sf1gkwk.mongodb.net/?retryWrites=true&w=majority&appName=Healthcare-Management-System
 JWT_SECRET=S3cr3tK3y_2025
 EMAIL_USER=abhaytiwari0821@gmail.com
+EMAIL_PASS=ndzgmiwmtajdghpy
 EMAIL_HOST = "smtp.gmail.com"
