--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "framer-motion": "^12.18.1",
     "pdfjs-dist": "^4.10.38",
     "python-shell": "^5.0.0",
     "react": "^19.0.0",
