--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.8.1",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "framer-motion": "^12.18.1",
+    "lucide-react": "^0.515.0",
     "pdfjs-dist": "^4.10.38",
     "python-shell": "^5.0.0",
     "react": "^19.0.0",
@@ -23,7 +25,8 @@
     "react-hook-form": "^7.58.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.2.0"
+    "react-router-dom": "^7.2.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
